syntax = "proto3";

package doom;

message Entry {
    string key = 1;
    int64 offset =2;
    int64 length = 3;
    bytes data = 4;
}

message SSTableSingleIndex {
    string key = 1;
    int64 offset = 2;
    string fileName = 3;
}

message SSTableIndex {
    repeated SSTableSingleIndex indices = 1;
}